--- a/card.css
+++ b/card.css
@@ -1,4 +1,4 @@
-div{
+.div1{
   background-color: lightskyblue;
   width: 300px;
   margin-left: auto;
@@ -6,4 +6,17 @@ div{
   margin-top: 100px;
   padding-top: 90px ;
   padding-right: 90px;
+  border: 4px solid #222222;
+  border-radius: 20px;
+}
+
+button{
+  background-color: whitesmoke;
+  color: #222222;
+  padding-left: 3px;
+  padding-top: 5px;
+  padding-bottom: 5px ;
+  padding-right: 3px;
+  border-radius: 16px;
+  font-weight: bold;
 }
