--- a/buisnessCard.css
+++ b/buisnessCard.css
@@ -3,11 +3,44 @@
   margin-right: 50px;
 }
 .card{
+  display: flex;
+  width: 400px;
   padding: 20px;
   background: lightblue;
-  display: flex;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: space-around;
+
 }
 .dotted{
-  border: 1px dotted blue;
+  background: #ddebf8;
+  border-bottom: 6px solid #d8cefe;
+  color: #2b2839;
+  text-shadow: 2px 2px 5px  red;
+}
+
+body{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.liquid-morph-element {
+  width: 250px;
+  height: 100px;
+  background: #0a2342;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 50px;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.liquid-morph-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #001;
 }
